--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,7 @@
 {
   "recommendations": [
-    "detachhead.basedpyright",
-    "vue.volar",
+    // "detachhead.basedpyright",
+    // "vue.volar",
     "vue.vscode-typescript-vue-plugin",
     "charliermarsh.ruff",
     "dbaeumer.vscode-eslint"
