--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "autoprefixer": "^10.4.20",
     "cli-real-favicon": "0.0.8",
     "postcss": "^8.4.47",
+    "update-browserslist-db": "^1.0.9",
     "sass": "^1.78.0",
     "typescript": "^5.6.2",
     "vite": "^4.5.5",
