--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -264,7 +264,8 @@ django-filer==3.2.2
     #   djangocms-picture
     #   djangocms-video
     #   froide-govplan
-django-filingcabinet @ git+https://github.com/okfde/django-filingcabinet.git@d27b0a823e72cb0e854dd961fdb2cdfa8b417907
+#django-filingcabinet @ git+https://github.com/okfde/django-filingcabinet.git@d27b0a823e72cb0e854dd961fdb2cdfa8b417907
+django-filingcabinet @ git+https://github.com/okfde/django-filingcabinet.git@main
     # via
     #   fragdenstaat-de (pyproject.toml)
     #   fcdocs-annotate
@@ -403,7 +404,8 @@ docopt==0.6.2
     # via num2words
 docutils==0.21.2
     # via sphinx
-dogtail @ git+https://github.com/okfde/dogtail.git@d2f341cab0f05ef4e193f0158fe5a64aadc5bae6
+dogtail @ git+https://github.com/okfde/dogtail.git@main 
+            #d2f341cab0f05ef4e193f0158fe5a64aadc5bae6
     # via froide
 drf-spectacular==0.27.2
     # via froide
